<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray">

    <androidx.cardview.widget.CardView
        style="@style/card_view_driver_card_style"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_driver_item_description"
                style="@style/description_diver_data_text_view_style"
                android:text="@string/name_driver_item_description_text_view"
                app:layout_constraintStart_toEndOf="@+id/driver_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_driver_item"
                style="@style/diver_data_text_view_style"
                android:text="Владисла"
                app:layout_constraintStart_toEndOf="@+id/driver_image"
                app:layout_constraintTop_toBottomOf="@id/name_driver_item_description" />

            <View
                style="@style/under_line_view_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/driver_image"
                app:layout_constraintTop_toBottomOf="@+id/name_driver_item" />

            <TextView
                android:id="@+id/last_name_driver_item_description"
                style="@style/description_diver_data_text_view_style"
                android:text="@string/last_name_driver_item_description_text_view"
                app:layout_constraintStart_toEndOf="@+id/driver_image"
                app:layout_constraintTop_toBottomOf="@id/name_driver_item" />

            <TextView
                android:id="@+id/last_name_driver_item"
                style="@style/diver_data_text_view_style"
                android:text="Прокофьев"
                app:layout_constraintStart_toEndOf="@+id/driver_image"
                app:layout_constraintTop_toBottomOf="@id/last_name_driver_item_description" />

            <View
                style="@style/under_line_view_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/driver_image"
                app:layout_constraintTop_toBottomOf="@+id/last_name_driver_item" />

            <TextView
                android:id="@+id/surname_driver_item_description"
                style="@style/description_diver_data_text_view_style"
                android:text="@string/surname_driver_item_description_text_view"
                app:layout_constraintStart_toEndOf="@+id/driver_image"
                app:layout_constraintTop_toBottomOf="@id/last_name_driver_item" />

            <TextView
                android:id="@+id/surname_driver_item"
                style="@style/diver_data_text_view_style"
                android:text="Андреевич"
                app:layout_constraintStart_toEndOf="@+id/driver_image"
                app:layout_constraintTop_toBottomOf="@id/surname_driver_item_description" />

            <View
                style="@style/under_line_view_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/driver_image"
                app:layout_constraintTop_toBottomOf="@+id/surname_driver_item" />

            <TextView
                android:id="@+id/phone_number_driver_item_description"
                style="@style/description_diver_data_text_view_style"
                android:text="@string/phone_number_driver_item_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surname_driver_item" />

            <TextView
                android:id="@+id/phone_number_driver_item"
                style="@style/diver_data_text_view_style"
                android:text="+380444618061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_driver_item_description" />

            <TextView
                android:id="@+id/car_number_driver_item_description"
                style="@style/description_diver_data_text_view_style"
                android:text="@string/car_number_driver_item_description_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surname_driver_item" />

            <TextView
                android:id="@+id/car_number_driver_item"
                style="@style/diver_data_text_view_style"
                android:text="АК9265АК"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_number_driver_item_description" />

            <View
                android:layout_width="match_parent"
                style="@style/under_line_view_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_driver_item" />

            <TextView
                android:id="@+id/car_driver_item_description"
                style="@style/description_diver_data_text_view_style"
                android:text="@string/car_driver_item_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_driver_item" />

            <TextView
                android:id="@+id/car_driver_item"
                style="@style/diver_data_text_view_style"
                android:text="Audi A4 (B8)"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_driver_item_description" />

            <View
                android:layout_width="match_parent"
                style="@style/under_line_view_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_driver_item" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/driver_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="20dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>