<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        style="@style/card_view_style"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/main_liner_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/driver_image_ride"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="20dp"
                        android:src="@mipmap/ic_launcher" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name_driver_item_ride_description"
                        style="@style/description_data_text_view_style"
                        android:text="@string/name_driver_item_description_text_view" />

                    <TextView
                        android:id="@+id/name_driver_ride_item"
                        style="@style/data_text_view_style"
                        android:text="Владислав" />

                    <View style="@style/under_line_view_style" />

                    <TextView
                        android:id="@+id/last_name_driver_ride_item_description"
                        style="@style/description_data_text_view_style"
                        android:text="@string/last_name_driver_item_description_text_view" />

                    <TextView
                        android:id="@+id/last_name_driver_ride_item"
                        style="@style/data_text_view_style"
                        android:text="Прокофьев" />

                    <View style="@style/under_line_view_style" />

                    <TextView
                        android:id="@+id/surname_driver_ride_item_description"
                        style="@style/description_data_text_view_style"
                        android:text="@string/surname_driver_item_description_text_view" />

                    <TextView
                        android:id="@+id/surname_driver_ride_item"
                        style="@style/data_text_view_style"
                        android:text="Андреевич" />

                    <View style="@style/under_line_view_style" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/phone_number_driver_ride_item_description"
                style="@style/description_data_text_view_style"
                android:text="@string/phone_number_driver_item_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_liner_layout" />

            <TextView
                android:id="@+id/phone_number_driver_ride_item"
                style="@style/data_text_view_style"
                android:text="+380444618061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_driver_ride_item_description" />

            <View
                android:id="@+id/view2"
                style="@style/under_line_view_style"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_driver_ride_item" />

            <TextView
                android:id="@+id/name_user_item_ride_description"
                style="@style/description_data_text_view_style"
                android:text="@string/name_user_item_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_driver_ride_item" />

            <TextView
                android:id="@+id/name_user_ride_item"
                style="@style/data_text_view_style"
                android:text="Андрей"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_user_item_ride_description" />

            <View
                style="@style/under_line_view_style"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_user_ride_item" />

            <TextView
                android:id="@+id/last_name_user_item_ride_description"
                style="@style/description_data_text_view_style"
                android:text="@string/last_name_user_item_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_user_ride_item" />

            <TextView
                android:id="@+id/last_name_user_ride_item"
                style="@style/data_text_view_style"
                android:text="Семёнов"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_user_item_ride_description" />

            <View
                style="@style/under_line_view_style"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_user_ride_item" />

            <TextView
                android:id="@+id/surname_user_item_ride_description"
                style="@style/description_data_text_view_style"
                android:text="@string/surname_user_item_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_user_ride_item" />

            <TextView
                android:id="@+id/surname_user_ride_item"
                style="@style/data_text_view_style"
                android:text="Дмитртевич"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname_user_item_ride_description" />

            <View
                style="@style/under_line_view_style"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname_user_ride_item" />

            <TextView
                android:id="@+id/phone_number_user_item_ride_description"
                style="@style/description_data_text_view_style"
                android:text="@string/phone_number_user_item_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname_user_ride_item" />

            <TextView
                android:id="@+id/phone_number_user_ride_item"
                style="@style/data_text_view_style"
                android:text="+380555618061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_user_item_ride_description" />

            <View
                style="@style/under_line_view_style"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_user_ride_item" />

            <TextView
                android:id="@+id/coast_ride_item_ride_description"
                style="@style/description_data_text_view_style"
                android:text="@string/coast_ride_user_item_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_user_ride_item" />

            <TextView
                android:id="@+id/coast_ride_ride_item"
                style="@style/data_text_view_style"
                android:text="1500 ₴"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coast_ride_item_ride_description" />

            <View
                style="@style/under_line_view_style"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coast_ride_ride_item" />

            <TextView
                android:id="@+id/pay_method_ride_item_ride_description"
                style="@style/description_data_text_view_style"
                android:text="@string/pay_method_user_item_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coast_ride_ride_item" />

            <TextView
                android:id="@+id/pay_method_ride_ride_item"
                style="@style/data_text_view_style"
                android:text="Google pay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pay_method_ride_item_ride_description" />

            <View
                style="@style/under_line_view_style"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pay_method_ride_ride_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>